feat: protobuf, grpc, configuration, composition layer, slog

--- a/services/core/.env.example
+++ b/services/core/.env.example
@@ -1,8 +1,43 @@
-PORT=8080
+# ============================================================
+# KitsuLAN Core — Environment Configuration
+# Скопируйте содержимое файла в .env и заполните значения.
+# ============================================================
 
-# БД (из docker-compose)
-DB_URL="host=localhost user=kitsu password=kitsu_password dbname=kitsulan port=5432 sslmode=disable"
+# --- Application ---
+APP_ENV=development          # development | production
+GRPC_ADDR=:8090
+READ_TIMEOUT=30s
+WRITE_TIMEOUT=30s
 
-# LiveKit (из livekit.yaml)
-LIVEKIT_API_KEY=devkey
-LIVEKIT_API_SECRET=secret
+# --- Database ---
+# Для development (Docker Compose):
+DB_DRIVER=postgres           # postgres | sqlite
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=kitsu
+DB_PASSWORD=kitsu_password
+DB_NAME=kitsulan
+DB_SSL_MODE=disable
+
+# Для lite-развертывания (SQLite):
+# DB_DRIVER=sqlite
+# DB_SQLITE_PATH=./data/kitsulan.db
+
+# --- JWT ---
+# ОБЯЗАТЕЛЬНО менять в production!
+# Минимум 32 символа, можно сгенерировать: openssl rand -hex 32
+JWT_SECRET=dev-secret-change-this-in-production-please
+JWT_ACCESS_TTL=24h
+JWT_REFRESH_TTL=168h         # 7 дней
+
+# --- LiveKit (Phase 3, оставь пусто пока не нужно) ---
+LIVEKIT_URL=
+LIVEKIT_KEY=
+LIVEKIT_SECRET=
+
+# --- S3 / MinIO (Phase 4, пусто пока не нужно) ---
+S3_ENDPOINT=localhost:9000
+S3_ACCESS_KEY=kitsu_minio
+S3_SECRET_KEY=kitsu_minio_password
+S3_BUCKET=kitsulan
+S3_USE_SSL=false
