refactor(core/deploy): rework configuration, update .env.example

--- a/services/core/.env.example
+++ b/services/core/.env.example
@@ -1,42 +1,95 @@
 # ============================================================
 # KitsuLAN Core — Environment Configuration
-# Скопируйте содержимое файла в .env и заполните значения.
+# Скопируйте этот файл в .env и заполните значениями.
 # ============================================================
 
 # --- Application ---
-APP_ENV=development          # development | production
-GRPC_ADDR=:8090
+# Режим запуска: development | production
+# В production логи пишутся в JSON, уровень Info.
+APP_ENV=development
+
+# Таймауты для gRPC
 READ_TIMEOUT=30s
 WRITE_TIMEOUT=30s
 
+# --- Network & Ports ---
+# Адрес прослушивания (обычно 0.0.0.0 для Docker)
+LISTEN_ADDR=0.0.0.0
+
+# Основной gRPC порт API
+# Так же публикуется healthcheck gRPC-эндпоинт /health
+PUBLIC_API_PORT=8090
+
+# Порт для healthcheck http-эндпоинта /healthz (Docker/K8s probes)
+HEALTH_PORT=8091
+
+# Порт для Prometheus metrics http-эндпоинт /metrics
+METRICS_PORT=8092
+
 # --- Database ---
-# Для development (Docker Compose):
-DB_DRIVER=postgres           # postgres | sqlite
-DB_HOST=localhost
+# Выбор драйвера: postgres | sqlite
+DB_DRIVER=postgres
+
+# PostgreSQL Configuration
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=kitsu
 DB_PASSWORD=kitsu_password
 DB_NAME=kitsulan
+# Режимы SSL: disable | require | verify-full
 DB_SSL_MODE=disable
 
-# Для lite-развертывания (SQLite):
-# DB_DRIVER=sqlite
-# DB_SQLITE_PATH=./data/kitsulan.db
+# SQLite Configuration (используется, если DB_DRIVER=sqlite)
+DB_SQLITE_PATH=kitsulan.db
 
-# --- JWT ---
-# ОБЯЗАТЕЛЬНО менять в production!
-# Минимум 32 символа, можно сгенерировать: openssl rand -hex 32
+# --- JWT Authentication ---
+# Секретный ключ для подписи токенов.
+# ВНИМАНИЕ: В production должен быть минимум 32 символа!
+# Сгенерировать можно командой: openssl rand -hex 32
 JWT_SECRET=dev-secret-change-this-in-production-please
-JWT_ACCESS_TTL=24h
-JWT_REFRESH_TTL=168h         # 7 дней
 
-# --- LiveKit (Phase 3, оставь пусто пока не нужно) ---
+# Время жизни токенов
+JWT_ACCESS_TTL=24h
+JWT_REFRESH_TTL=168h
+
+# --- Caching (Multi-level) ---
+# Включить кэширование глобально (true/false)
+CACHE_ENABLED=true
+CACHE_NAMESPACE=kitsulan-core
+CACHE_VERSION=v1
+CACHE_TTL=10m
+# Jitter (разброс TTL) для предотвращения Cache Stampede (0.0 - 1.0)
+CACHE_TTL_JITTER=0.15
+
+# L2 Cache: Redis Configuration
+# Обязательно, если CACHE_ENABLED=true
+REDIS_ADDR=redis:6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_CACHE_FAILOVER=false
+REDIS_DIAL_TIMEOUT=2s
+REDIS_READ_TIMEOUT=500ms
+REDIS_WRITE_TIMEOUT=500ms
+
+# L1 Cache: Ristretto (In-Memory)
+# Обычно повторяет CACHE_ENABLED, но можно выключить отдельно
+CACHE_L1_ENABLED=true
+# Максимальная стоимость (размер) кэша в байтах (100MB = 104857600)
+CACHE_L1_MAX_COST=104857600
+# Ожидаемое количество ключей * 10 (для Bloom filter)
+CACHE_L1_NUM_COUNTERS=1000000
+CACHE_L1_TTL=5m
+CACHE_L1_METRICS=false
+
+# --- External Services (Future Phases) ---
+
+# LiveKit (WebRTC SFU) - Phase 3
 LIVEKIT_URL=
 LIVEKIT_KEY=
 LIVEKIT_SECRET=
 
-# --- S3 / MinIO (Phase 4, пусто пока не нужно) ---
-S3_ENDPOINT=localhost:9000
+# S3 Compatible Storage (MinIO/AWS) - Phase 4
+S3_ENDPOINT=minio:9000
 S3_ACCESS_KEY=kitsu_minio
 S3_SECRET_KEY=kitsu_minio_password
 S3_BUCKET=kitsulan
